css/style.css
*, ::before, ::after {
    box-sizing: border-box;
}

:root {
    --color-primary: #1e88e5;
    --color-secondary: #ffffff;
    --color-main: #e2e8f0;
    --color-aesthetics1: #f0b429;
    --color-text-muted: #777;
}

html, body {
    margin: 0;
    padding: 0;
    font-family: "Roboto", sans-serif;
    line-height: 1.5;
}

body {
    height: 100vh;
    display: grid;
    grid-template-columns: minmax(200px, 1fr) 5fr;
    grid-template-rows: minmax(150px, 1fr) 4fr;
    grid-template-areas: 
    'sidebar header'
    'sidebar main';
}

.sidebar {
    grid-area: sidebar;
    background-color: var(--color-primary);
    color: var(--color-secondary);
    font-weight: 700;
    display: grid;
    grid-template-rows: 50px repeat(2, min-content);
    row-gap: 5%;
    padding-left: 20px;
}

.sidebar .icons {
    justify-self: center;
}

.sidebar  p {
    display: inline;
    margin: 0.3rem;
    font-size: 1.2rem;
}

.sidebar .icons {
    filter: invert(1) brightness(2);
}

.icons:not(.dashboard-header > .icons)  {
    width: 23px;
    height: 23px;
}

.dashboard-header, nav {
    display: grid;
    grid-template-columns: 40px 1fr;
    align-items: center;
    column-gap: 3%
}

.main-header {
    grid-area: header;
    display: grid;
    grid-template-columns: 2fr 1fr;
    grid-template-rows: 1fr 2fr;
    align-items: center;
    justify-items: center;
}

.text {
    color: var(--color-text-muted);
}

.main-header > form {
    width: 90%;
}

.main-header > form input[type="search"] {
    width: 90%;
    height: 30px;
    background-color: var(--color-main);
    border: none;
    border-radius: 15px;
}

.main-header > form label > .icons {
    vertical-align: middle;
    margin: 5px;
}

.main-header > div:first-of-type {
    width: 100%;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

button.notification {
    all: unset;
    cursor: pointer;
    width: 23px;
    height: 23px; 
    vertical-align: middle;
}

button.notification:active {
    filter: invert(0.5);
    transform: scale(0.9);
}

.user-profile > p {
    display: inline-block;
    margin-left: 30px;
    font-weight: 700;
    font-size: 1.2rem;
}

.userpic-icon1 {
    width: 50px;
    height: 50px;
    border-radius: 25px;
}

.userpic-icon1, .userpic-icon2 {
    vertical-align: middle;
    border: 3px solid var(--color-primary);
}

.welcome-user {
    justify-self: start;
    padding-left: 5%;
}

.userpic-icon2 {
    width: 75x;
    height: 75px;
    border-radius: 40px;
}

.welcome-user > div {
    display: inline-block;
    margin-left: 20px;
    vertical-align: middle;
}

.welcome-user p {
    font-weight: 700;
    margin: 1px
}

.welcome-user p:first-of-type {
    font-size: 0.9rem;
}

.welcome-user p:last-of-type {
    font-size: 1.5rem;
}

.user-action {
    width: 100%;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    justify-content: center;
}

.user-action button {
    width: 65%;
    height: 2.5rem;
    border: none;
    border-radius: 30px;
    background-color: var(--color-primary);
    color: var(--color-secondary);
    font-weight: 700;
    font-size: 1rem;
}

.user-action button:active {
    transform: scale(0.9);
}

.main-content {
    grid-area: main;
    background-color: var(--color-main);
    display: grid;
    grid-template-columns: 3fr 1fr;
    gap: 30px;
    padding: 10px 30px 75px 20px;
}

.main-content article {
    background-color: var(--color-secondary);
    border-radius: 5px;
}

#your-projects {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: min-content repeat(3, 1fr);
    grid-row: span 2;
    gap: inherit;
}

#your-projects > h3 {
    grid-column: 1 / -1;
    margin-bottom: -11px;
}

#your-projects article {
    border-left: 10px solid var(--color-aesthetics1);
    position: relative;
    padding: 3rem;
}

.project-icons {
    position: absolute;
    bottom: 1.5rem;
    right: 1.5rem;
}

.project-icons img {
    margin-right: 1.5rem;
}

#announcements article {
    padding: 2rem;
}

#announcements .announcement-text {
    font-size: 0.8rem;
}

#trending > article {
    padding: 1rem 2rem;
}

.trending-project {
    margin: 1rem 0;
}

.trending-project > div {
    display: inline-block;
    vertical-align: middle;
    margin-left: 1rem;
}

.trending-project > div p {
    margin: 0;
}

.trending-project > div p:first-of-type {
    font-weight: 700;
}

